# FunctiionalStore_Botv1.14

./: README.MD  pyproject.toml  pytest.ini  requirements.in  requirements.txt
app/: app.py  temp.py
app/app_utils/: logging.py  modules.py
app/bot/: cli.py  main.py  rm.py
app/bot/core/: bot.py  config.py  startup.py
app/bot/modules/example_model/: logging.py  router.py  settings.py
app/bot/modules/main/: logging.py  router.py  settings.py
app/bot/modules/proxies/: logging.py  response.py  router.py  settings.py
app/core/: modules_loader.py  response.py
app/error_handlers/: decorator.py  helpers.py  network.py
src/app/app_utils/: chek.py  filesistem.py  fsm.py  keyboards.py  logging.py  network.py
src/app/app_utils/module_creator/: creator.py
src/app/app_utils/module_loader/: loader.py
src/app/core/: messages.py  response.py  typing.py
src/app/error_handlers/: decorator.py  helpers.py  network.py
tests/: conftest.py  test_create_module.py  test_error_handler_for_the_website.py  test_remove_module.py
tests/integration/: test_load_modules.py  test_remove_module.py
tests/integration/api/: test_webshare_api_integration.py
tests/integration/services/: test_webshare_service_integration.py  test_youtube_search_service_integration.py
tests/integration/utils/: test_error_handler_for_the_website.py
tests/unit/: test_create_module.py  test_remove_module.py
tests/unit/api/: test_telegram_api.py
tests/unit/services/: test_free_proxy_service_unit.py  test_password_service_unit.py  test_youtube_search_service_unit.py
(+130 files in other folders)
