[project]
name = "func-store-bot"
version = "0.6.3"
description = "Modular Telegram Bot Framework"
requires-python = ">= 3.8"

dependencies = [
    "pydantic-settings==2.2.1",
    "pydantic==2.6.1",
    "aiogram==3.13.1",
    "aiohttp==3.10.11",
    "free-proxy==1.1.3",
    "icrawler==0.6.10"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-aiohttp"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bot = "app.main:main"
cli = "app.cli:main"
